<resources>
    <string name="app_name">Orrku</string>
    <string name="deal">Deal(%): </string>
    <string name="on">On($): </string>
    <string name="percent">%</string>
    <string name="dollar">$</string>
    <string name="title">Title: </string>
    <string name="from">From: </string>
    <string name="to">To: </string>
    <string name="valid_till">Valid Till: </string>
    <string name="restrictions">Restrictions: </string>
    <string name="store_address">Store Address: </string>
    <string name="add">ADD </string>
    <string name="days">Days: </string>
    <string name="add_image">ADD IMAGE</string>
    <string name="set_as_deafult">SET AS DEFAULT</string>

</resources>
